Add endpoint to retrieve all validators associated with an eth1 address and all eth1 deposits for a set of validators
